<resources>
    <string name="app_name">Multi Apps</string>

    <!--IMC APP-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Recalcular</string>
    <string name="result">Resultado</string>

    <string name="error">Error</string>

    <string name="title_underweight">Bajo peso</string>
    <string name="description_underweight">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_normal_weight">Normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_overweight">Sobrepeso</string>
    <string name="description_overweight">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Estás muy por encima de lo óptimo para tu peso y altura.</string>

    <!--TODOAPP-->
    <string name="todo_title">Bienvenido V.</string>
    <string name="todo_category">Categorías</string>
    <string name="todo_tasks">Tareas:</string>
    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_category_others">Otros</string>
    <string name="todo_dialog_category_create_task">Crear tarea</string>

    <!--SUPERHERO APP-->
    <string name="superhero_alignment">Alignment: %s</string>
    <string name="superhero_relatives">Relatives: %s</string>
    <string name="superhero_group_affiliation">Group Affiliation: %s</string>
    <string name="superhero_base">Base: %s</string>
    <string name="superhero_occupation">Occupation: %s</string>
    <string name="superhero_hair_color">Hair color: %s</string>
    <string name="superhero_eye_color">Eye color: %s</string>
    <string name="superhero_durability">Durability</string>
    <string name="superhero_intelligence">Intelligence</string>
    <string name="superhero_strength">Strength</string>
    <string name="superhero_speed">Speed</string>
    <string name="superhero_power">Power</string>
    <string name="superhero_combat">Combat</string>
</resources>